# iron-crypto

./: .gitignore  README.md  pyproject.toml
iron/crypto/: __init__.py  common.py  seal.py  unseal.py
tests/: test_crypto.py
